--- a/starter.html
+++ b/starter.html
@@ -60,8 +60,8 @@
                   Card 1
                </div>
                <p class="p-3">
-                  <!-- ========== <Partner 1 Name> ========== -->
-                     
+                  <!-- ========== <Shayan> ========== -->
+                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente voluptatem, ratione omnis quisquam facilis illo cumque perspiciatis ducimus ipsam mollitia numquam deleniti dolores accusamus repellat magnam cum laboriosam. Eveniet, quas.
                   <!-- ====================================== -->
                </p>
             </div>
@@ -72,7 +72,7 @@
                   Card 2
                </div>
                <p class="p-3">
-                  <!-- ========== <Partner 2 Name> ========== -->
+                  <!-- ========== <Partner 2: Atif > ========== -->
 
                   <!-- ====================================== -->
                </p>
